// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordReset /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="reset-password"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <p
          className="label"
        >
          Have you forgot your password? Enter your email address, phone number or username below and we'll  send you the instructions to reset it.
        </p>
        <div
          className="fieldset"
        >
          <div
            className="row"
          >
            <label
              htmlFor="input"
            >
              Email, phone number or username
            </label>
            <input
              autoComplete="input"
              className="input "
              id="input"
              name="input"
              onChange={[Function]}
              placeholder="enter email, phone number or username"
              required={true}
              title="enter valid email address, an username or a phone number"
              type="text"
              value=""
            />
          </div>
          <div
            className="row submit"
          >
            <input
              className="button full"
              type="submit"
              value="Reset My Password"
            />
          </div>
        </div>
        <div
          className="row contact-us"
        >
          Please contact us if you have any trouble resetting your password.
        </div>
        <div
          className="row links"
        >
          <Link
            className="link"
            to="/default/login"
          >
            Go back to sign in
          </Link>
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;

exports[`<PasswordReset /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="reset-password"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <p
          className="label"
        >
          PWD_RESET_ADD_TXT
        </p>
        <div
          className="fieldset"
        >
          <div
            className="row"
          >
            <label
              htmlFor="input"
            >
              USERNAME_LOG_LBL
            </label>
            <input
              autoComplete="input"
              className="input "
              id="input"
              name="input"
              onChange={[Function]}
              placeholder="USERNAME_LOG_PHOLD"
              required={true}
              title="USERNAME_LOG_TITL"
              type="text"
              value=""
            />
          </div>
          <div
            className="row submit"
          >
            <input
              className="button full"
              type="submit"
              value="PWD_RESET_BTN"
            />
          </div>
        </div>
        <div
          className="row contact-us"
        >
          PWD_RESET_CNTC_TXT
        </div>
        <div
          className="row links"
        >
          <Link
            className="link"
            to="/default/login"
          >
            LOGIN_PG_LNK
          </Link>
        </div>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
